Fixed greeting and section spacing

--- a/src/styles/styles_home.css
+++ b/src/styles/styles_home.css
@@ -2,6 +2,7 @@
 	width: 1080px;
 	height: auto;
 	padding: 15em;
+	padding-bottom: 20em;
 	margin: 5em auto;
 	font-family: "Raleway", sans-serif;
 	color: #ffffff;
