--- a/src/styles/styles_main.css
+++ b/src/styles/styles_main.css
@@ -34,7 +34,7 @@ h2 {
 .section_div {
 	width: 1400px;
 	height: auto;
-	padding: 15em;
+	padding: 5em 10em;
 	margin: 5em auto;
 	font-family: "Raleway", sans-serif;
 	color: #ffffff;
